Move validation to request processing instead of flight